change database config as per heroku instructions for rails

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,3 +22,5 @@ test:
 production:
   <<: *default
   database: hello_production
+  username: hello
+  password: <%= ENV['HELLO_DATABASE_PASSWORD'] %>
