--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,23 @@
+require:
+  - rubocop-performance
+  - rubocop-rails
+  - rubocop-thread_safety
+
+AllCops:
+  NewCops: enable
+  Exclude:
+    - "db/schema.rb"
+    - "Gemfile"
+    - "lib/tasks/*.rake"
+    - "bin/*"
+    - "node_modules/**/*"
+    - "config/puma.rb"
+    - "config/spring.rb"
+    - "config/environments/development.rb"
+    - "config/environments/production.rb"
+    - "config/initializers/devise.rb"
+    - "spec/spec_helper.rb"
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
@@ -6,6 +26,6 @@ Style/Documentation:
 
 Metrics/BlockLength:
   Max: 25
-  ExcludedMethods: ["describe", "it", "context"]
+  IgnoredMethods: ["describe", "it", "context"]
   Exclude:
     - "spec/**/*.rb"
