--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,3 +29,6 @@ Metrics/BlockLength:
   IgnoredMethods: ["describe", "it", "context"]
   Exclude:
     - "spec/**/*.rb"
+
+Metrics/MethodLength:
+  Max: 30
