fix local docker postgres setup after running into issues from having a local version of Postgres running natively on laptop caused a port conflict and app was trying to connect to native db rather than version running in Docker container

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,7 @@ default: &default
 
 development:
   <<: *default
+  port: 5433
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -18,6 +19,7 @@ development:
 test:
   <<: *default
   database: hello_test
+  port: 5433
 
 production:
   <<: *default
