add procfile and prod db config for cache, queue, and cable

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,20 @@ test:
   database: hello_test
 
 production:
-  <<: *default
-  database: hello_production
-  username: hello
-  password: <%= ENV['HELLO_DATABASE_PASSWORD'] %>
+  primary: &primary_production
+    <<: *default
+    database: hello_production
+    username: hello
+    password: <%= ENV['HELLO_DATABASE_PASSWORD'] %>
+  cache:
+    <<: *primary_production
+    database: hello_production_cache
+    migrations_paths: db/cache_migrate
+  queue:
+    <<: *primary_production
+    database: hello_production_queue
+    migrations_paths: db/queue_migrate
+  cable:
+    <<: *primary_production
+    database: hello_production_cable
+    migrations_paths: db/cable_migrate
