attempt to get rspec tests running on ci with custom role created for test db

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    # TODO: https://danielabaron.me/blog/debug-github-action/#solution
     services:
       postgres:
         image: postgres
@@ -66,7 +65,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
-        options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --name hello_db --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
 
       # redis:
       #   image: redis
@@ -81,24 +80,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Create role
+        run: docker exec hello_db bash -c "PGPASSWORD=postgres psql -U postgres -c \"create role hello with createdb login password 'hello'\""
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      # TODO: rspec
       - name: Run tests
         env:
           RAILS_ENV: test
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare test test:system
+        run: |
+          bin/rails db:test:prepare
+          bin/rspec
 
-      - name: Keep screenshots from failed system tests
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: screenshots
-          path: ${{ github.workspace }}/tmp/screenshots
-          if-no-files-found: ignore
+      # - name: Keep screenshots from failed system tests
+      #   uses: actions/upload-artifact@v4
+      #   if: failure()
+      #   with:
+      #     name: screenshots
+      #     path: ${{ github.workspace }}/tmp/screenshots
+      #     if-no-files-found: ignore
