try bundle exec instead of bin/rails

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,7 @@ jobs:
           bundler-cache: true
 
       - name: Run RuboCop
-        run: |
-          bin/rubocop -f github
+        run: bundle exec rubocop
 
   test:
     runs-on: ubuntu-latest
