--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,8 @@ jobs:
           bundler-cache: true
 
       - name: Run RuboCop
-        run: bundle exec rubocop
+        run: bin/rubocop -f github
+        # run: bundle exec rubocop
 
   test:
     runs-on: ubuntu-latest
