try bundle exec instead of bin to run cucumber on ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,7 +137,7 @@ jobs:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
         run: |
           bin/rails db:test:prepare
-          bin/cucumber
+          bundle exec cucumber
 
       # - name: Keep screenshots from failed system tests
       #   uses: actions/upload-artifact@v4
