--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,10 +139,10 @@ jobs:
           bin/rails db:test:prepare
           bundle exec cucumber
 
-      # - name: Keep screenshots from failed system tests
-      #   uses: actions/upload-artifact@v4
-      #   if: failure()
-      #   with:
-      #     name: screenshots
-      #     path: ${{ github.workspace }}/tmp/screenshots
-      #     if-no-files-found: ignore
+      - name: Keep screenshots from failed system tests
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: screenshots
+          path: ${{ github.workspace }}/tmp/screenshots
+          if-no-files-found: ignore
